kubernetes/utilities/webtop/webtop-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: webtop
  namespace: utilities
spec:
  selector:
    app: webtop
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
