kubernetes/utilities/webtop/webtop-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: webtop-traefik
  namespace: utilities
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`webtop.kubernetes.timo.be`) || Host(`webtop.timo.be`) || Host(`testtraefik.timo.be`) || Host(`testtraefik.kubernetes.timo.be`) 
      kind: Rule
      services:
        - name: webtop
          port: 3000
          scheme: http
      middlewares:
        - name: auth
          namespace: traefik
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webtop-tailscale
  namespace: utilities
spec:
  defaultBackend:
    service:
      name: webtop
      port:
        number: 3000
  ingressClassName: tailscale
  tls:
    - hosts:
        - webtop
